--- a/tarot.html
+++ b/tarot.html
@@ -24,6 +24,7 @@
   <script type="text/babel" src="components/TarotCardPositions.js"></script>
   <script type="text/javascript" src="db/archetypalJourney.js"></script>
   <script type="text/javascript" src="db/shorts.js"></script>
+  <script type="text/javascript" src="db/shorts2.js"></script>
   <style>
     img {
       width:120px
