--- a/astrology.html
+++ b/astrology.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Astrology</title>
+  <style>
+    table { width: 100% }
+    td { height: 100px; text-align: center }
+    td img { height: 50px }
+    td span { font-weight: bold; font-size: 30px; margin-right: 10px }
+  </style>
 </head>
 <body>
 <table border="1" cellpadding="2" cellspacing="0">
@@ -22,25 +28,25 @@
     <td></td>
   </tr>
   <tr>
-    <td>1) ♈ - Aries - The Ram - Avinas</td>
-    <td>10) ♑︎- Capricorn - The Goat - Ožiaragis</td>
-    <td>7) ♎︎- Libra - The Scales - Svarstyklės</td>
-    <td>4) ♋︎- Cancer - The Crab - Vėžys</td>
-    <td>Cardinal</td>
+    <td>1) <span>♈</span> Aries - The Ram - Avinas</td>
+    <td>10) <span>♑</span> Capricorn - The Goat - Ožiaragis</td>
+    <td>7) <span>♎</span> Libra - The Scales - Svarstyklės</td>
+    <td>4) <span>♋</span> Cancer - The Crab - Vėžys</td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Cardinal_symbol.svg/1024px-Cardinal_symbol.svg.png"> Cardinal</td>
   </tr>
   <tr>
-    <td>5) ♌︎- Leo - The Lion -  Liūtas</td>
-    <td>2) ♉︎- Taurus - The Bull - ︎Jautis</td>
-    <td>11) ♒︎- Aquarius - The Water-bearer - Vandenis</td>
-    <td>8) ♏︎- Scorpio - The Scorpion - Skorpionas</td>
-    <td>Fixed</td>
+    <td>5) <span>♌</span> Leo - The Lion -  Liūtas</td>
+    <td>2) <span>♉</span> Taurus - The Bull - ︎Jautis</td>
+    <td>11) <span>♒</span> Aquarius - The Water-bearer - Vandenis</td>
+    <td>8) <span>♏</span> Scorpio - The Scorpion - Skorpionas</td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Fixed_symbol.svg/1024px-Fixed_symbol.svg.png"> Fixed</td>
   </tr>
   <tr>
-    <td>9) ♐︎- Sagittarius - The Archer</td>
-    <td>6) ♍︎- Virgo - The Maiden - Mergelė</td>
-    <td>3) ♊︎- Gemini - The Twins - Dvyniai</td>
-    <td>12) ♓︎- Pisces - The Fish - Žuvys</td>
-    <td>Mutable</td>
+    <td>9) <span>♐</span> Sagittarius - The Archer</td>
+    <td>6) <span>♍</span> Virgo - The Maiden - Mergelė</td>
+    <td>3) <span>♊</span> Gemini - The Twins - Dvyniai</td>
+    <td>12) <span>♓</span> Pisces - The Fish - Žuvys</td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Mutable_symbol.svg/40px-Mutable_symbol.svg.png"> Mutable</td>
   </tr>
   </tbody>
 </table>
