Remove one word in order to look table balanced

--- a/tarot.html
+++ b/tarot.html
@@ -144,7 +144,7 @@
           <td>3.Growth/Initial achievement<br/>Active/Change</td>
           <td>4.Stability<br/>Passive/Stability</td>
           <td>5.Problems/Instability<br/>Active/Change</td>
-          <td>6.Solutions/Relaxation, Adjustment<br/>Passive/Stability</td>
+          <td>6.Solutions/Relaxation<br/>Passive/Stability</td>
           <td>7.Effort/Reflection<br/>Active/Change</td>
           <td>8.Movement<br/>Passive/Stability</td>
           <td>9.Completion<br/>Active/Change</td>
