--- a/vuecomponents/tarot-annak.html
+++ b/vuecomponents/tarot-annak.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>AnnaK Tarot</title>
-    <script src="https://unpkg.com/xstate@4/dist/xstate.js"></script>
-    <script src="machines/annaktarot.machine.js"></script>
+    <script src="src/xstate.js"></script>
+<!--    <script src="https://unpkg.com/xstate@4/dist/xstate.js"></script>-->
+<!--    <script src="https://unpkg.com/@xstate/vue/dist/xstate-vue.min.js"></script>-->
+
+    <script src="machines/TarotTable.machine.js"></script>
+
     <script src="assets/annak-assets.js"></script>
     <script src="assets/annak-texts.js"></script>
 
@@ -14,24 +18,51 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@3.1.4/dist/vuetify.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/vuetify@3.1.4/dist/vuetify.min.js"></script>
 
-    <script type="module" src="modules/Card.js"></script>
+    <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
+
+
+<!--    <script type="module" src="modules/Card.js"></script>-->
 </head>
 <body>
 <div id="app"></div>
 
 <script type="module">
+    // const { createMachine, actions, interpret, assign } = XState;
+    // console.log( XState );
+    // console.log( XStateVue );
+</script>
+
+<script type="module">
+    const Home = { template: '<div>Home</div>' }
+    const About = { template: '<div>About</div>' }
+    import TarotTable from './modules/TarotTable.js';
+    import Card from './modules/Card.js';
+
+    const routes = [
+        { path: '/', component: TarotTable },
+        { path: '/card/:id', component: Card },
+        { path: '/about', component: About },
+    ]
+
+    const router = VueRouter.createRouter({
+        history: VueRouter.createWebHashHistory(),
+        routes: routes
+    })
+    ///////////////////////////////////////////////////////
+
     import AnnaTarot from './modules/annaktarot.js';
 
     const { createApp } = Vue;
+
     const { createVuetify } = Vuetify;
-
-
     const vuetify = createVuetify();
 
-    const app = createApp(AnnaTarot)
-        .use(vuetify)
-        .mount("#app");
+    const app = createApp(AnnaTarot);
+    app.use(vuetify);
+    app.use(router);
+    app.mount("#app");
 
 </script>
+
 </body>
 </html>
