Rename folder vuecomponents to vue

--- a/tarot-vue.html
+++ b/tarot-vue.html
@@ -22,8 +22,8 @@
         }
     }).mount('#app')*/
 
-    import MyComponent from './vuecomponents/my-component.js';
-    import Tarot from './vuecomponents/tarot.js';
+    import MyComponent from './vue/my-component.js';
+    import Tarot from './vue/tarot.js';
 
     // createApp(MyComponent).mount('#app')
     createApp(Tarot).mount('#app')
