--- a/vue/tarot-annak.html
+++ b/vue/tarot-annak.html
@@ -27,12 +27,6 @@
 <div id="app"></div>
 
 <script type="module">
-    // const { createMachine, actions, interpret, assign } = XState;
-    // console.log( XState );
-    // console.log( XStateVue );
-</script>
-
-<script type="module">
     const Home = { template: '<div>Home</div>' }
     const About = { template: '<div>About</div>' }
     import TarotTable from './modules/TarotTable.js';
@@ -50,7 +44,7 @@
     })
     ///////////////////////////////////////////////////////
 
-    import AnnaTarot from './modules/annaktarot.js';
+    import AnnaTarot from './modules/Main.js';
 
     const { createApp } = Vue;
 
