--- a/tarot.html
+++ b/tarot.html
@@ -27,6 +27,7 @@
   <script type="text/javascript" src="db/shorts.js"></script>
   <script type="text/javascript" src="db/shorts2.js"></script>
   <script type="text/javascript" src="db/shorts3.js"></script>
+  <script type="text/javascript" src="db/shorts4.js"></script>
   <style>
     img {
       width:120px
