--- a/antv.html
+++ b/antv.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Tutorial Demo</title>
-    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.1.0/build/g6.js"></script>
+    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.2.3/build/g6.js"></script>
+    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.2.3/build/g6.js"></script>
+
+    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.2.3/build/minimap.js"></script>
+
+    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.2.3/build/grid.js"></script>
 </head>
 <body>
 <!--http://g6-v3-2.antv.vision/en/docs/manual/tutorial/example-->
